<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    android:background="@drawable/border"
    tools:context=".ui.ScreenRecorderActiivty">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10sp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/allAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen_recoder"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="10sp"
                    android:textColor="@color/global_black" />



            </LinearLayout>

            <TextView
                android:id="@+id/allDatatxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grant_asked_permission_for_start_recording"
                android:gravity="center"
                android:textSize="14sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20sp"
                android:textColor="@color/global_black" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/arrowios"
                android:layout_height="1dp">

            </LinearLayout>
            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_marginRight="3dp"-->
            <!--android:layout_marginLeft="3dp"-->
            <!--android:background="@color/white"-->
            <!--android:layout_height="1dp">-->

            <!--</LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:weightSum="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:id="@+id/nobtn"
                        android:text="@string/dismiss"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textColor="@color/lightgray"
                        android:layout_height="wrap_content">


                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="1dp"
                    android:background="@color/arrowios"
                    android:layout_height="match_parent">


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:id="@+id/startbtn"
                        android:textAlignment="center"
                        android:text="@string/start"
                        android:textSize="16sp"
                        android:textColor="@color/blueios"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
