<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="64dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#fafafa"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/notification_layout_main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/notification_layout_show_icon_container"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/image"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/srpng"
                    android:scaleType="centerInside"
                    tools:ignore="ContentDescription" />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    tools:ignore="RelativeOverlap">

                    <TextView
                        android:id="@+id/notification_layout_tv_first"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/app_name"
                        android:textColor="@color/text_color"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/notification_layout_tv_second"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:text="@string/accelerate_for_smoother_performance"
                        android:textColor="@color/text_color"
                        android:textSize="12sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="25sp"
                    android:id="@+id/stpimg"
                    android:layout_marginStart="20sp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_stop"
                    android:layout_height="25sp"
                    tools:ignore="ContentDescription">

                </ImageView>

            </RelativeLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/notification_layout_show_icon_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@+id/notification_layout_boost_container"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/install_button_bg_radius"
                android:gravity="center"
                android:minWidth="60dp"
                android:paddingStart="8dp"
                android:paddingTop="9dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:text="@string/str_show"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/notification_layout_boost_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/install_button_bg_radius"
                android:gravity="center"
                android:visibility="gone"
                android:paddingStart="8dp"
                android:paddingTop="9dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:text="@string/boost"
                android:textColor="@android:color/white"
                android:textSize="13sp"
                android:textStyle="bold" />
        </FrameLayout>
    </RelativeLayout>
</FrameLayout>
